--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html lang="ja">
-
+<html>
 <head>
-    <!-- Required meta tags -->
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>トップページ</title>
+    <title>数当てゲーム</title>
 </head>
-
 <body>
-    <h1>大阪情報専門学校 2024 Linuxサーバ構築(R3SC)</h1>
-    <a href="tomorrow_plan">明日の予定</a>
-</body>
+    <h1>数当てゲーム</h1>
+    <p>1から100までの数を当ててください！</p>
 
+    <form method="post">
+        <input type="number" name="guess" required>
+        <button type="submit">予想</button>
+    </form>
+    
+    {% if message %}
+    <p>{{ message }}</p>
+    {% endif %}
+    {% if attempts > 0 %}
+    <p>試行回数: {{ attempts }}</p>
+    {% endif %}
+    
+</body>
 </html>
